# sayvdo

./: README.md  TASK.md  project_context.md  pyproject.toml  sayvdo.db
sayvdo/: __init__.py  cli.py  main.py  worklog.py
sayvdo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sayvdo/core/: fetcher.py  history.py  scorer.py
sayvdo/core/dimensions/: ai_narrative.py  capital_honesty.py  esg_substance.py  guidance_accuracy.py  risk_drift.py
templates/: index.html  report.html
