[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sayvdo"
version = "0.1.0"
description = "Multi-dimensional corporate truthfulness engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "beautifulsoup4",
    "jinja2",
]

[project.scripts]
sayvdo = "sayvdo.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sayvdo*"]
